# watchinspect-data

./: Cargo.toml  build.rs  currency.py  rates.json
.cargo/: config.toml
data_server/: Cargo.toml
data_server/src/: error.rs  main.rs
scraper/: Cargo.toml
scraper/src/: beep.rs  currency.rs  identify.rs  main.rs  prelude.rs  tests.rs  tokenize.rs
scraper/src/scrapers/: mod.rs  other.rs  rolex_forums.rs
src/: brand_tokens.rs  brands.rs  currency.rs  error.rs  main.rs  prelude.rs  tokenize.rs
src/scrapers/: mod.rs  other.rs  rolex_forums.rs
