cargo-features = ["profile-rustflags"]

[package]
name = "watchinspect-data"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug-assertions = false
lto = true
overflow-checks = false
panic = "abort"
debug = true
split-debuginfo = "packed"
rustflags = ["-Ctarget-feature=+avx,+avx2,+fma"]
strip = true

[profile.dev]
opt-level = 1
rustflags = ["-Ctarget-feature=+avx,+avx2,+fma"]

[dependencies]
rodio = "0.15"
lazy_static = "1.5.0"
regex = "1.10.6"
scraper = "0.20.0"
chrono = "0.4.0"
unicode-normalization = "0.1"
thiserror = "1.0"
reqwest = { version = "0.12.0", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
futures = "0.3.30"
currency = "0.4.0"
num = "0.4.3"

[build-dependencies]
chrono = "0.4.0"
unicode-normalization = "0.1"
